--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@truffle/contract": "^4.4.5",
     "bootstrap": "^5.1.3",
     "primeicons": "^5.0.0",
     "primereact": "^7.2.0",
