--- a/web-app/client/package.json
+++ b/web-app/client/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "3.2.0",
-    "web3": "^1.6.1",
-    "bootstrap": "^5.1.3",
-    "primeicons": "^5.0.0",
-    "primereact": "^7.2.0"
+    "react-transition-group": "^4.4.2",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
