--- a/web-app/client/package.json
+++ b/web-app/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "primeicons": "^5.0.0",
     "primereact": "^7.2.0",
